65) kernel: dql: dql_queued() should write first to reduce bus transactions.<br>
<br>
<br>
<b>3.0.x</b><br>
1) uboot: update to 4.3.2.0 version.<br>
2) igmpproxy: fix switch managment.<br>
3) switchtools: add vlan clear command.<br>
4) goahead: in webui add VPN/WAN ipv6 uplink switch.<br>
5) goahead: cleaning and fixing network web forms.<br>
6) goahead: move radvd and dhcp6s services to ipv6 page.<br>
7) goahead/init.d: store dhcp static lease to nvram.<br>
8) miniupnpd: up to 1.9.20150430 version.<br>
9) init.d: full cleanup vlan parts in restore dumb mode function.<br>
10) configs: enable hw_nat ipv6 support for all devices.<br>
11) kernel: add MX25L51245G, MT25QL512AB, N25Q256A spi flashs support.<br>
12) kernel: ralink_arch: disable MT7621 PCIe Spread Spectrum to avoid Ch14 Rx De-sense.<br>
13) kernel: ralink_arch: set MT7628 PCIe PHY to 1.3mA for power saving when PCIe port not used.<br>
14) kernel: ralink_arch: fix MT7628 SDXC clock interferences.<br>
15) kernel: ralink_nvram: fix check part size in commit.<br>
16) kernel: ralink_hw_nat: add FoE 80b entries workaround on IPv6 offload enabled.<br>
17) kernel: ralink_hw_nat: disable multicast offload on QDMA enabled (CPU reason is stripped after FQ).<br>
18) kernel: ralink_raeth: fix MT7628 EPHY initialization.<br>
19) kernel: ralink_raeth: always use TX ring size 512 to prevent ring full on PPE loopback traffic.<br>
20) kernel: ralink_raeth: add support MT7621 'clause 45' MDIO control.<br>
21) kernel: ralink_raeth: fix dump MT7621/MT7530 EPHY registers.<br>
22) kernel: tcp: update reordering first before detecting loss.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (need help community or employ the web developer).<br>
2) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
3) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
4) need add davfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>
