@@ -1,6 +1,7 @@
 #ifndef __RA_PHY_H__
 #define __RA_PHY_H__
 
+void fe_phy_init_early(void);
 void fe_phy_init(void);
 
 void init_giga_phy(int ge);
